--- a/Customer/package.json
+++ b/Customer/package.json
@@ -13,7 +13,7 @@
     "dev:serve": "ts-node src/server",
     "ts:dev": "nodemon src/script.ts",
     "ts:build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "lint": "eslint . --ext .ts",
     "ts:start": "tsc && node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
@@ -42,6 +42,7 @@
     "express-winston": "^4.2.0",
     "helmet": "^7.0.0",
     "http-status-codes": "^2.2.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.3.1",
@@ -50,6 +51,7 @@
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "tsoa": "^5.1.1",
     "uniqid": "^5.4.0",
@@ -68,18 +70,19 @@
     "@types/express-mongo-sanitize": "^2.1.0",
     "@types/express-session": "^1.17.7",
     "@types/http-status-codes": "^1.2.0",
+    "@types/jest": "^29.5.10",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.196",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.4.5",
     "@types/sharp": "^0.32.0",
+    "@types/supertest": "^2.0.16",
     "@types/swagger-jsdoc": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uniqid": "^5.3.2",
     "@types/yamljs": "^0.2.31",
     "concurrently": "^8.2.0",
-    "jest": "^29.6.4",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.1",
     "supertest": "^6.3.3",
