--- a/Customer/package.json
+++ b/Customer/package.json
@@ -14,6 +14,7 @@
     "ts:dev": "nodemon src/script.ts",
     "ts:build": "tsc",
     "test": "jest --coverage",
+    "test-app": "jest",
     "lint": "eslint . --ext .ts",
     "ts:start": "tsc && node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
